--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://118.184.216.160/power-china/le-ipms-ionic",
   "private": true,
   "scripts": {
-    "start": "ng serve --proxy-config proxy.config.json --host=0.0.0.0 --port=4200",
+    "start": "ng serve --proxy-config proxy.config.json --host=10.16.253.1 --port=4200",
     "build": "ng build  --base-href ./",
     "build:prod": "ng build --prod"
   },
@@ -25,6 +25,7 @@
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
     "echarts": "^4.2.1",
+    "hammerjs": "^2.0.8",
     "ng2-pdf-viewer": "^5.3.3",
     "ngx-echarts": "^4.2.1",
     "pdfjs-dist": "^2.1.266",
